minilang/src/parser/grammar/.antlr/GrammarParser.java
// Generated from /home/user/src/antrl_pleasure/minilang/src/parser/grammar/Grammar.g4 by ANTLR 4.7.1

package compiler.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, TRUE=2, FALSE=3, READ=4, WRITE=5, IF=6, ELSE=7, STR=8, VAR=9, 
		GR=10, LS=11, EQ=12, GRT=13, LST=14, NEQ=15, ATR=16, OEX=17, CEX=18, OBL=19, 
		CBL=20, NOT=21, ADD=22, SUB=23, MUL=24, DIV=25, MOD=26, NUM=27, EOL=28, 
		COMMENT=29, LINE_COMMENT=30, WS=31;
	public static final int
		RULE_progr = 0, RULE_line = 1, RULE_read = 2, RULE_write = 3, RULE_atr = 4, 
		RULE_ifstm = 5, RULE_expr = 6, RULE_term = 7, RULE_fact = 8, RULE_boolExpr = 9, 
		RULE_relop = 10, RULE_block = 11;
	public static final String[] ruleNames = {
		"progr", "line", "read", "write", "atr", "ifstm", "expr", "term", "fact", 
		"boolExpr", "relop", "block"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'!'", "'true'", "'false'", "'read'", "'write'", "'if'", "'else'", 
		null, null, "'>'", "'<'", "'=='", "'>='", "'<='", "'!='", "'='", "'('", 
		"')'", "'{'", "'}'", null, "'+'", "'-'", "'*'", "'/'", "'%'", null, "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "TRUE", "FALSE", "READ", "WRITE", "IF", "ELSE", "STR", "VAR", 
		"GR", "LS", "EQ", "GRT", "LST", "NEQ", "ATR", "OEX", "CEX", "OBL", "CBL", 
		"NOT", "ADD", "SUB", "MUL", "DIV", "MOD", "NUM", "EOL", "COMMENT", "LINE_COMMENT", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgrContext extends ParserRuleContext {
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_progr; }
	}

	public final ProgrContext progr() throws RecognitionException {
		ProgrContext _localctx = new ProgrContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_progr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(24);
				line();
				}
				}
				setState(27); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << READ) | (1L << WRITE) | (1L << IF) | (1L << VAR))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
	 
		public LineContext() { }
		public void copyFrom(LineContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LineAtrContext extends LineContext {
		public AtrContext atr() {
			return getRuleContext(AtrContext.class,0);
		}
		public LineAtrContext(LineContext ctx) { copyFrom(ctx); }
	}
	public static class LineReadContext extends LineContext {
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public LineReadContext(LineContext ctx) { copyFrom(ctx); }
	}
	public static class LineWriteContext extends LineContext {
		public WriteContext write() {
			return getRuleContext(WriteContext.class,0);
		}
		public LineWriteContext(LineContext ctx) { copyFrom(ctx); }
	}
	public static class LineIfStmContext extends LineContext {
		public IfstmContext ifstm() {
			return getRuleContext(IfstmContext.class,0);
		}
		public LineIfStmContext(LineContext ctx) { copyFrom(ctx); }
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		try {
			setState(33);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case READ:
				_localctx = new LineReadContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(29);
				read();
				}
				break;
			case WRITE:
				_localctx = new LineWriteContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(30);
				write();
				}
				break;
			case VAR:
				_localctx = new LineAtrContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(31);
				atr();
				}
				break;
			case IF:
				_localctx = new LineIfStmContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(32);
				ifstm();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadContext extends ParserRuleContext {
		public TerminalNode READ() { return getToken(GrammarParser.READ, 0); }
		public TerminalNode VAR() { return getToken(GrammarParser.VAR, 0); }
		public ReadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read; }
	}

	public final ReadContext read() throws RecognitionException {
		ReadContext _localctx = new ReadContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_read);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			match(READ);
			setState(36);
			match(VAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WriteContext extends ParserRuleContext {
		public WriteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_write; }
	 
		public WriteContext() { }
		public void copyFrom(WriteContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class WriteStrContext extends WriteContext {
		public TerminalNode WRITE() { return getToken(GrammarParser.WRITE, 0); }
		public TerminalNode STR() { return getToken(GrammarParser.STR, 0); }
		public WriteStrContext(WriteContext ctx) { copyFrom(ctx); }
	}
	public static class WriteExprContext extends WriteContext {
		public TerminalNode WRITE() { return getToken(GrammarParser.WRITE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public WriteExprContext(WriteContext ctx) { copyFrom(ctx); }
	}

	public final WriteContext write() throws RecognitionException {
		WriteContext _localctx = new WriteContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_write);
		try {
			setState(42);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new WriteStrContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				match(WRITE);
				setState(39);
				match(STR);
				}
				break;
			case 2:
				_localctx = new WriteExprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(40);
				match(WRITE);
				setState(41);
				expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtrContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(GrammarParser.VAR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AtrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atr; }
	}

	public final AtrContext atr() throws RecognitionException {
		AtrContext _localctx = new AtrContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_atr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(VAR);
			setState(45);
			match(ATR);
			setState(46);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfstmContext extends ParserRuleContext {
		public IfstmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifstm; }
	 
		public IfstmContext() { }
		public void copyFrom(IfstmContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IfElseStmContext extends IfstmContext {
		public BlockContext b1;
		public BlockContext b2;
		public TerminalNode IF() { return getToken(GrammarParser.IF, 0); }
		public BoolExprContext boolExpr() {
			return getRuleContext(BoolExprContext.class,0);
		}
		public TerminalNode ELSE() { return getToken(GrammarParser.ELSE, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public IfElseStmContext(IfstmContext ctx) { copyFrom(ctx); }
	}
	public static class IfStmContext extends IfstmContext {
		public TerminalNode IF() { return getToken(GrammarParser.IF, 0); }
		public BoolExprContext boolExpr() {
			return getRuleContext(BoolExprContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public IfStmContext(IfstmContext ctx) { copyFrom(ctx); }
	}

	public final IfstmContext ifstm() throws RecognitionException {
		IfstmContext _localctx = new IfstmContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifstm);
		try {
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new IfElseStmContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				match(IF);
				setState(49);
				match(OEX);
				setState(50);
				boolExpr();
				setState(51);
				match(CEX);
				setState(52);
				((IfElseStmContext)_localctx).b1 = block();
				setState(53);
				match(ELSE);
				setState(54);
				((IfElseStmContext)_localctx).b2 = block();
				}
				break;
			case 2:
				_localctx = new IfStmContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				match(IF);
				setState(57);
				match(OEX);
				setState(58);
				boolExpr();
				setState(59);
				match(CEX);
				setState(60);
				block();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExprMinusContext extends ExprContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExprMinusContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ExprSingleContext extends ExprContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public ExprSingleContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ExprSumContext extends ExprContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExprSumContext(ExprContext ctx) { copyFrom(ctx); }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expr);
		int _la;
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new ExprSumContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				term();
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ADD) {
					{
					setState(65);
					match(ADD);
					}
				}

				setState(68);
				expr();
				}
				break;
			case 2:
				_localctx = new ExprMinusContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				term();
				setState(71);
				match(SUB);
				setState(72);
				expr();
				}
				break;
			case 3:
				_localctx = new ExprSingleContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				term();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
	 
		public TermContext() { }
		public void copyFrom(TermContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TermDivContext extends TermContext {
		public FactContext left;
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public FactContext fact() {
			return getRuleContext(FactContext.class,0);
		}
		public TermDivContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class TermModContext extends TermContext {
		public FactContext left;
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public FactContext fact() {
			return getRuleContext(FactContext.class,0);
		}
		public TermModContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class TermSingleContext extends TermContext {
		public FactContext fact() {
			return getRuleContext(FactContext.class,0);
		}
		public TermSingleContext(TermContext ctx) { copyFrom(ctx); }
	}
	public static class TermMulContext extends TermContext {
		public FactContext left;
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public FactContext fact() {
			return getRuleContext(FactContext.class,0);
		}
		public TermMulContext(TermContext ctx) { copyFrom(ctx); }
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_term);
		try {
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new TermMulContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				((TermMulContext)_localctx).left = fact();
				setState(78);
				match(MUL);
				setState(79);
				term();
				}
				break;
			case 2:
				_localctx = new TermDivContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				((TermDivContext)_localctx).left = fact();
				setState(82);
				match(DIV);
				setState(83);
				term();
				}
				break;
			case 3:
				_localctx = new TermModContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(85);
				((TermModContext)_localctx).left = fact();
				setState(86);
				match(MOD);
				setState(87);
				term();
				}
				break;
			case 4:
				_localctx = new TermSingleContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(89);
				fact();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactContext extends ParserRuleContext {
		public FactContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fact; }
	 
		public FactContext() { }
		public void copyFrom(FactContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FactNumContext extends FactContext {
		public TerminalNode NUM() { return getToken(GrammarParser.NUM, 0); }
		public FactNumContext(FactContext ctx) { copyFrom(ctx); }
	}
	public static class FactVarContext extends FactContext {
		public TerminalNode VAR() { return getToken(GrammarParser.VAR, 0); }
		public FactVarContext(FactContext ctx) { copyFrom(ctx); }
	}
	public static class FactExprContext extends FactContext {
		public ExprContext val;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public FactExprContext(FactContext ctx) { copyFrom(ctx); }
	}

	public final FactContext fact() throws RecognitionException {
		FactContext _localctx = new FactContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fact);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				_localctx = new FactVarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				match(VAR);
				}
				break;
			case NUM:
				_localctx = new FactNumContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				match(NUM);
				}
				break;
			case OEX:
				_localctx = new FactExprContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				match(OEX);
				setState(95);
				((FactExprContext)_localctx).val = expr();
				setState(96);
				match(CEX);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoolExprContext extends ParserRuleContext {
		public BoolExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolExpr; }
	 
		public BoolExprContext() { }
		public void copyFrom(BoolExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BoolFactContext extends BoolExprContext {
		public FactContext fact() {
			return getRuleContext(FactContext.class,0);
		}
		public BoolFactContext(BoolExprContext ctx) { copyFrom(ctx); }
	}
	public static class BoolRelopContext extends BoolExprContext {
		public ExprContext left;
		public ExprContext right;
		public RelopContext relop() {
			return getRuleContext(RelopContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public BoolRelopContext(BoolExprContext ctx) { copyFrom(ctx); }
	}
	public static class NegBoolExprContext extends BoolExprContext {
		public BoolExprContext boolExpr() {
			return getRuleContext(BoolExprContext.class,0);
		}
		public NegBoolExprContext(BoolExprContext ctx) { copyFrom(ctx); }
	}

	public final BoolExprContext boolExpr() throws RecognitionException {
		BoolExprContext _localctx = new BoolExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_boolExpr);
		try {
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new BoolFactContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				fact();
				}
				break;
			case 2:
				_localctx = new NegBoolExprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				match(T__0);
				setState(102);
				boolExpr();
				}
				break;
			case 3:
				_localctx = new BoolRelopContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(103);
				((BoolRelopContext)_localctx).left = expr();
				setState(104);
				relop();
				setState(105);
				((BoolRelopContext)_localctx).right = expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelopContext extends ParserRuleContext {
		public Token op;
		public RelopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relop; }
	}

	public final RelopContext relop() throws RecognitionException {
		RelopContext _localctx = new RelopContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_relop);
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case GR:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				((RelopContext)_localctx).op = match(GR);
				}
				break;
			case LS:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				((RelopContext)_localctx).op = match(LS);
				}
				break;
			case EQ:
				enterOuterAlt(_localctx, 3);
				{
				setState(111);
				((RelopContext)_localctx).op = match(EQ);
				}
				break;
			case GRT:
				enterOuterAlt(_localctx, 4);
				{
				setState(112);
				((RelopContext)_localctx).op = match(GRT);
				}
				break;
			case LST:
				enterOuterAlt(_localctx, 5);
				{
				setState(113);
				((RelopContext)_localctx).op = match(LST);
				}
				break;
			case NEQ:
				enterOuterAlt(_localctx, 6);
				{
				setState(114);
				((RelopContext)_localctx).op = match(NEQ);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public LineContext line() {
			return getRuleContext(LineContext.class,0);
		}
		public ProgrContext progr() {
			return getRuleContext(ProgrContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_block);
		try {
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case READ:
			case WRITE:
			case IF:
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				line();
				}
				break;
			case OBL:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				match(OBL);
				setState(119);
				progr();
				setState(120);
				match(CBL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}